--- a/ui/src/app/film/film.component.scss
+++ b/ui/src/app/film/film.component.scss
@@ -8,9 +8,9 @@
   padding: 2rem 5rem;
 
   .media {
-    display: grid;
+    display: flex;
+    flex-direction: column;
     grid-row-gap: 2rem;
-    justify-content: center;
 
     &__poster {
       max-width: 100%;
@@ -20,52 +20,71 @@
     }
 
     &__trailer-btn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       color: var(--color-grey-light-1);
-      font-size: 1.6rem;
-      border: 1px solid var(--color-primary);
-      background-color: var(--color-grey-dark-3);
+      background-color: var(--color-grey-dark-1);
       border-radius: $border-radius-lg;
+      transition: all .3s;
+      height: 6rem;
+      box-shadow: var(--box-shadow-smallest);
 
+      &:hover {
+        background-color: var(--color-primary);
+        transform: translateY(-2px);
+        box-shadow: var(--box-shadow-smaller);
+      }
+
+      &:active {
+        transform: translateY(-1px);
+      }
+
+      i {
+        font-size: 2.5rem;
+        text-align: center;
+      }
 
       span {
         margin-left: 1.5rem;
+        font-size: 2rem;
       }
     }
   }
+}
 
-  .other {
-    .nav {
-      justify-content: center;
+.nav {
+  justify-content: center;
+  transform: translateX(-18%);
+  margin-bottom: 2rem;
 
-      &__list {
-        display: flex;
-        list-style: none;
-        padding: 0;
-        margin: 0;
-      }
+  &__list {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
 
-      &__link:link,
-      &__link:visited {
-        display: inline-block;
-        text-decoration: none;
-        color: #fff;
-        font-size: 1.6rem;
-        text-transform: uppercase;
-        font-weight: 200;
-        letter-spacing: 4px;
-        border: 1px solid var(--color-primary);
-        padding: 1rem 3.5rem;
-        transition: all .4s;
-      }
+  &__link:link,
+  &__link:visited {
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    font-size: 1.6rem;
+    text-transform: uppercase;
+    font-weight: 200;
+    letter-spacing: 4px;
+    border: 1px solid var(--color-primary);
+    padding: 1rem 3.5rem;
+    transition: all .4s;
+  }
 
-      &__link:hover,
-      &__link:active {
-        background-color: rgba(255, 0, 27, .2);
-      }
+  &__link:hover,
+  &__link:active {
+    background-color: rgba(255, 0, 27, .2);
+  }
 
-      &__link--active {
-        background-color: var(--color-primary);
-      }
-    }
+  &__link--active {
+    background-color: var(--color-primary);
   }
 }
