--- a/ui/src/sass/_base.scss
+++ b/ui/src/sass/_base.scss
@@ -11,8 +11,9 @@
   --color-grey-light-3: #bbb;
 
   --color-grey-dark-1: #555;
-  --color-grey-dark-2: #444;
+  --color-grey-dark-2: rgba(68, 68, 68, 0.2);
   --color-grey-dark-3: #222;
+  --color-grey-dark-4: #111;
 
   --header-height: 7rem;
 
@@ -22,6 +23,9 @@
   --border-thin-grey-light-2: 1px solid var(--color-grey-light-2);
   --border-thin-grey-dark-2: 1px solid var(--color-grey-dark-2);
   --border-thin-grey-dark-3: 1px solid var(--color-grey-dark-3);
+
+  --box-shadow-smallest: 0 1rem 2rem rgba(68, 68, 68, .3);
+  --box-shadow-smaller: 0 1rem 3rem rgba(68, 68, 68, .3);
 }
 
 *,
